// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer 1`] = `
<div
  className="StartujiciProTyp-grid"
>
  <a
    aria-current={false}
    className="StartujiciProTyp-item Legenda-item-dokonceno"
    href="/prihlasky/10"
    onClick={[Function]}
    style={undefined}
  >
    7
  </a>
</div>
`;

exports[`renders Startujici - odstartováni 1`] = `
<div
  className="Startujici-div"
>
  <div
    className="Startujici-buttons"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="Startujici-button"
      disabled={false}
      onClick={[Function]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="list-alt"
      />
       Přihlášeni
    </Button>
    <Button
      active={true}
      block={false}
      bsClass="btn"
      bsStyle="success"
      className="Startujici-button"
      disabled={false}
      onClick={[Function]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="road"
      />
       Odstartováni
    </Button>
  </div>
  <div
    className="Startujici_legenda"
  >
    <Legenda
      legenda={
        Array [
          Object {
            "name": "dokonceno",
            "popisek": "dokončeno",
          },
          Object {
            "name": "nedokonceno",
            "popisek": "nedokončeno",
          },
          Object {
            "name": "na-trase",
            "popisek": "na trase",
          },
          Object {
            "name": "neaktivni",
            "popisek": "neaktivní",
          },
        ]
      }
    />
  </div>
  <div
    className="Startujici-typ"
    key="maraton"
  >
    <div
      className="Startujici-popisek"
    >
      <PopisekKategorie
        typ="maraton"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={true}
      odstartovani={true}
      renderer={[Function]}
      typ="maraton"
    />
  </div>
  <div
    className="Startujici-typ"
    key="půlmaraton"
  >
    <div
      className="Startujici-popisek"
    >
      <PopisekKategorie
        typ="půlmaraton"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={true}
      odstartovani={true}
      renderer={[Function]}
      typ="půlmaraton"
    />
  </div>
  <div
    className="Startujici-typ"
    key="cyklo"
  >
    <div
      className="Startujici-popisek"
    >
      <PopisekKategorie
        typ="cyklo"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={true}
      odstartovani={true}
      renderer={[Function]}
      typ="cyklo"
    />
  </div>
  <div
    className="Startujici-typ"
    key="koloběžka"
  >
    <div
      className="Startujici-popisek"
    >
      <PopisekKategorie
        typ="koloběžka"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={true}
      odstartovani={true}
      renderer={[Function]}
      typ="koloběžka"
    />
  </div>
</div>
`;

exports[`renders Startujici - přihlášeni 1`] = `
<div
  className="Startujici-div"
>
  <div
    className="Startujici-buttons"
  >
    <Button
      active={true}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="Startujici-button"
      disabled={false}
      onClick={[Function]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="list-alt"
      />
       Přihlášeni
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="success"
      className="Startujici-button"
      disabled={false}
      onClick={[Function]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="road"
      />
       Odstartováni
    </Button>
  </div>
  <div
    className="Startujici_legenda"
  >
    <Legenda
      legenda={
        Array [
          Object {
            "name": "dokonceno",
            "popisek": "dokončeno",
          },
          Object {
            "name": "nedokonceno",
            "popisek": "nedokončeno",
          },
          Object {
            "name": "na-trase",
            "popisek": "na trase",
          },
        ]
      }
    />
  </div>
  <div
    className="Startujici-typ"
    key="maraton"
  >
    <div
      className="Startujici-popisek"
    >
      <PopisekKategorie
        typ="maraton"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="maraton"
    />
  </div>
  <div
    className="Startujici-typ"
    key="půlmaraton"
  >
    <div
      className="Startujici-popisek"
    >
      <PopisekKategorie
        typ="půlmaraton"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="půlmaraton"
    />
  </div>
  <div
    className="Startujici-typ"
    key="cyklo"
  >
    <div
      className="Startujici-popisek"
    >
      <PopisekKategorie
        typ="cyklo"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="cyklo"
    />
  </div>
  <div
    className="Startujici-typ"
    key="koloběžka"
  >
    <div
      className="Startujici-popisek"
    >
      <PopisekKategorie
        typ="koloběžka"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="koloběžka"
    />
  </div>
</div>
`;
